# vector-text

./: Cargo.toml  README.md
crates/borland/: Cargo.toml  build.rs
crates/borland/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/hershey/: Cargo.toml  build.rs
crates/hershey/src/: lib.rs
crates/newstroke/: Cargo.toml  build.rs
crates/newstroke/src/: lib.rs
crates/vector-text/: Cargo.toml
crates/vector-text/examples/: svg.rs
crates/vector-text/src/: lib.rs
