[package]
name = "vector-text"
version = "0.1.0"
edition = "2024"
description = "A library for rendering text into a series of points using various vector fonts."
repository = "https://github.com/breqdev/vector-text"
categories = ["graphics"]


[dependencies]
vector-text-core = { path = "../core" }
vector-text-borland = { path = "../borland" }
vector-text-hershey = { path = "../hershey" }
vector-text-newstroke = { path = "../newstroke" }
