[package]
name = "vector-text"
version = "0.1.0"
edition = "2024"
description = "A library for rendering text into a series of points using various vector fonts."
repository = "https://github.com/breqdev/vector-text"
categories = ["graphics"]
license = "MIT OR Apache-2.0"
keywords = ["graphics", "vector", "font"]
readme = "../../README.md"

[dependencies]
vector-text-core = { workspace = true }
vector-text-borland = { workspace = true }
vector-text-hershey = { workspace = true }
vector-text-newstroke = { workspace = true }
